invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_18.src
.IPPcode24
MUL LF@a int@49